// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display all headers with locking and an extra class 1`] = `
<div
  className="grid-row grid-row--header "
  key="part-display-grid-header-row"
>
  <div
    className="grid-item--header pink grid-header--fixed-left"
    key="part-display-grid-header-section"
  >
    Section
  </div>
  <PartHeaders
    className="pink"
    key="part-display-grid-header-part-headers"
    lockFirstColumn={false}
    showErrors={true}
  />
  <SupplierProductFieldHeaders
    className="pink"
    key="part-display-grid-header-sp-headers"
    lockFirstColumn={false}
    showErrors={true}
  />
</div>
`;

exports[`should display all headers with locking and an extra class and actions 1`] = `
<div
  className="grid-row grid-row--header "
  key="part-display-grid-header-row"
>
  <div
    className="grid-item--header pink grid-header--fixed-left"
    key="part-display-grid-header-section"
  >
    Section
  </div>
  <PartHeaders
    className="pink"
    key="part-display-grid-header-part-headers"
    lockFirstColumn={false}
    showErrors={true}
  />
  <SupplierProductFieldHeaders
    className="pink"
    key="part-display-grid-header-sp-headers"
    lockFirstColumn={false}
    showErrors={true}
  />
  <div
    className="grid-item--header pink"
    key="part-display-grid-header-actions"
  >
    Actions
  </div>
</div>
`;

exports[`should display just part headers when supplier products no requested 1`] = `
<div
  className="grid-row grid-row--header "
  key="part-display-grid-header-row"
>
  <div
    className="grid-item--header  "
    key="part-display-grid-header-section"
  >
    Section
  </div>
  <PartHeaders
    className=""
    key="part-display-grid-header-part-headers"
    lockFirstColumn={false}
    showErrors={false}
  />
</div>
`;
